[gd_scene load_steps=12 format=3 uid="uid://dy3buq74oqbom"]

[ext_resource type="Theme" uid="uid://bvke1eripwx1b" path="res://assets/themes/border_theme.tres" id="1_55rsi"]
[ext_resource type="Script" path="res://scenes/menu/settings.gd" id="2_bvqip"]
[ext_resource type="StyleBox" uid="uid://60u1jnis73lu" path="res://assets/themes/borde_copado_ky.tres" id="2_l2jlr"]
[ext_resource type="ButtonGroup" uid="uid://4024fv1jo8t2" path="res://scenes/menu/settings_buttons.tres" id="3_3xvpl"]
[ext_resource type="Texture2D" uid="uid://c7qtfeaoqarqy" path="res://scenes/menu/inventory_key.tres" id="4_kkbw8"]
[ext_resource type="Texture2D" uid="uid://dbfo0cluxpght" path="res://assets/textures/UI/tilemap_packed.png" id="5_ikt7f"]

[sub_resource type="Gradient" id="Gradient_5hojr"]
offsets = PackedFloat32Array(0, 0.579151, 1)
colors = PackedColorArray(0, 0, 0, 0.2, 1, 1, 1, 0.419608, 1, 1, 1, 0.419608)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_h1uhd"]
noise_type = 3
seed = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8kxqq"]
generate_mipmaps = false
seamless = true
normalize = false
color_ramp = SubResource("Gradient_5hojr")
noise = SubResource("FastNoiseLite_h1uhd")

[sub_resource type="AtlasTexture" id="AtlasTexture_aepki"]
atlas = ExtResource("5_ikt7f")
region = Rect2(384, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjovh"]
atlas = ExtResource("5_ikt7f")
region = Rect2(272, 0, 16, 16)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_55rsi")
theme_type_variation = &"Settings"
script = ExtResource("2_bvqip")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 175)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -109.5
offset_right = 183.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_55rsi")
theme_override_styles/panel = ExtResource("2_l2jlr")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AudioButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../DisplayButton")
theme_override_font_sizes/font_size = 16
toggle_mode = true
button_group = ExtResource("3_3xvpl")
text = "Audio"

[node name="DisplayButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../AudioButton")
focus_neighbor_right = NodePath("../ControlsButton")
toggle_mode = true
button_group = ExtResource("3_3xvpl")
text = "Display"

[node name="ControlsButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../DisplayButton")
focus_neighbor_right = NodePath("../MainMenuButton")
toggle_mode = true
button_group = ExtResource("3_3xvpl")
text = "Controls"

[node name="MainMenuButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ControlsButton")
toggle_mode = true
button_group = ExtResource("3_3xvpl")
text = "Main Menu"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
texture = SubResource("NoiseTexture2D_8kxqq")
expand_mode = 4

[node name="AudioContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/AudioContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/PanelContainer/AudioContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="MusicVolumeLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/AudioContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/PanelContainer/AudioContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="SoundVolumeLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/AudioContainer"]
layout_mode = 2
text = "Sound Effects"

[node name="SoundVolumeSlider" type="HSlider" parent="PanelContainer/HBoxContainer/PanelContainer/AudioContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="DisplayContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ResolutionLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
item_count = 4
selected = 0
allow_reselect = true
popup/item_0/text = "x1"
popup/item_0/id = 0
popup/item_1/text = "x2"
popup/item_1/id = 1
popup/item_2/text = "x3"
popup/item_2/id = 2
popup/item_3/text = "x4"
popup/item_3/id = 3

[node name="VBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 2

[node name="FullscreenLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer2"]
layout_mode = 2
text = "Fullscreen
"

[node name="FullscreenCheckBox" type="CheckBox" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6

[node name="VBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 2

[node name="MonitorLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer3"]
layout_mode = 2
text = "Monitor
"

[node name="MonitorCheckBox" type="OptionButton" parent="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
item_count = 2
popup/item_0/text = "Primary"
popup/item_0/id = 0
popup/item_1/text = "Secondary"
popup/item_1/id = 1

[node name="ControlsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="InventoryControlLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="InventoryControlButton" type="TextureButton" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("4_kkbw8")
ignore_texture_size = true
stretch_mode = 5

[node name="VBoxContainer3" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="NotesControlLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer/VBoxContainer3"]
layout_mode = 2
text = "Notes"

[node name="NotesControlButton" type="TextureButton" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer/VBoxContainer3"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = SubResource("AtlasTexture_aepki")
ignore_texture_size = true
stretch_mode = 5

[node name="VBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 2

[node name="MenuControlLabel" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer/VBoxContainer2"]
layout_mode = 2
text = "Menu"

[node name="InventoryControlButton" type="TextureButton" parent="PanelContainer/HBoxContainer/PanelContainer/ControlsContainer/VBoxContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = SubResource("AtlasTexture_mjovh")
ignore_texture_size = true
stretch_mode = 5

[connection signal="button_down" from="PanelContainer/HBoxContainer/VBoxContainer/AudioButton" to="." method="_on_audio_button_button_down"]
[connection signal="button_down" from="PanelContainer/HBoxContainer/VBoxContainer/DisplayButton" to="." method="_on_display_button_button_down"]
[connection signal="button_down" from="PanelContainer/HBoxContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_button_down"]
[connection signal="button_down" from="PanelContainer/HBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/PanelContainer/AudioContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/PanelContainer/AudioContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/PanelContainer/AudioContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer2/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/PanelContainer/DisplayContainer/VBoxContainer3/MonitorCheckBox" to="." method="change_monitor"]
